docs/versioned_docs/version-2.0.0/reference/messages.mdx
<!-- Generated by port_legacy_docs.py v2 from v2.0.0 (9e9a4caeab258f2b564d6c219d328c45ae3d9347). Historical snapshot—do not edit directly. -->

<a id="messages"></a>
# Messages

**Messages** are the top-level objects you send to Slack. `slackblocks` provides several message types depending on the API surface you're targeting:

| Class                | When to use it                                                                                  |
|----------------------|-------------------------------------------------------------------------------------------------|
| `Message`            | Posting a normal message via `chat.postMessage` (the most common case).                         |
| `WebhookMessage`     | Sending to an [Incoming Webhook](https://api.slack.com/messaging/webhooks) URL.                 |
| `MessageResponse`    | Replying to a slash command or an interaction `response_url`.                                   |

All three implement `__getitem__`/`keys()`, so you can unpack them with `**message` straight into the Slack SDK. See [Sending Messages](/v2.0.0/usage/sending_messages) for end-to-end examples.

Slack reference: [https://api.slack.com/methods/chat.postMessage](https://api.slack.com/methods/chat.postMessage)

### Message {#messages.Message}

**Class**

```python
Message(channel: str, text: str | None = '', blocks: list[Block] | Block | None = None, attachments: list[Attachment] | None = None, thread_ts: str | None = None, mrkdwn: bool = True, unfurl_links: bool | None = None, unfurl_media: bool | None = None)
```

<div className="api-docstring">

A Slack message object that can be converted to a JSON string for use with
the Slack message API.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `channel` | `str` | the Slack channel to send the message to, e.g. "#general". |
| `text` | `str \| None` | markdown text to send in the message. If `blocks` are provided<br />then this is a fallback to display in notifications. |
| `blocks` | `list[Block] \| Block \| None` | a list of [`Blocks`](/v2.0.0/reference/blocks) to form the contents<br />of the message instead of the contents of `text`. |
| `attachments` | `list[Attachment] \| None` | a list of<br />[`Attachments`](/v2.0.0/reference/attachments/#attachments.Attachment)<br />that form the secondary contents of the message (deprecated). |
| `thread_ts` | `str \| None` | the timestamp ID of another unthreaded message that will<br />become the parent message of this message (now a reply in a thread). |
| `mrkdwn` | `bool` | if `True` the contents of `text` will be rendered as markdown<br />rather than plain text. |
| `unfurl_links` | `bool \| None` | if `True`, links in the message will be automatically<br />unfurled. |
| `unfurl_media` | `bool \| None` | if `True`, media from links (e.g. images) will<br />automatically unfurl. |

Raises:
    InvalidUsageException: in the event that the items passed to `blocks`
        are not valid [`Blocks`](/v2.0.0/reference/blocks).

</div>

### MessageResponse {#messages.MessageResponse}

**Class**

```python
MessageResponse(text: str | None = '', blocks: list[Block] | Block | None = None, attachments: list[Attachment] | None = None, thread_ts: str | None = None, mrkdwn: bool = True, replace_original: bool = False, ephemeral: bool = False)
```

<div className="api-docstring">

A required, immediate response that confirms your app received the payload.

</div>

### ResponseType {#messages.ResponseType}

**Class**

```python

```

<div className="api-docstring">

Types of messages that can be sent via `WebhookMessage`.

</div>

### WebhookMessage {#messages.WebhookMessage}

**Class**

```python
WebhookMessage(text: str | None = None, attachments: Attachment | list[Attachment] | None = None, blocks: Block | list[Block] | None = None, response_type: ResponseType | str | None = None, replace_original: bool | None = None, delete_original: bool | None = None, unfurl_links: bool | None = None, unfurl_media: bool | None = None, metadata: dict[str, Any] | None = None, headers: dict[str, str] | None = None)
```

<div className="api-docstring">

Messages sent via the Slack `WebhookClient` takes different arguments than
    those sent via the regular `WebClient`.

See: [https://github.com/slackapi/python-slack-sdk/blob/7e71b73/slack_sdk/webhook/client.py#L28](https://github.com/slackapi/python-slack-sdk/blob/7e71b73/slack_sdk/webhook/client.py#L28)

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `text` | `str \| None` | markdown text to send in the message. If `blocks` are provided<br />then this is a fallback to display in notifications. |
| `attachments` | `Attachment \| list[Attachment] \| None` | a list of<br />[`Attachments`](/v2.0.0/reference/attachments/#attachments.Attachment)<br />that form the secondary contents of the message (deprecated). |
| `blocks` | `Block \| list[Block] \| None` | a list of [`Blocks`](/v2.0.0/reference/blocks) to form the contents<br />of the message instead of the contents of `text`. |
| `response_type` | `ResponseType \| str \| None` | one of `ResponseType.EPHEMERAL` or `ResponseType.IN_CHANNEL`.<br />Ephemeral messages are shown only to the requesting user whereas<br />"in-channel" messages are shown to all channel participants. |
| `replace_original` | `bool \| None` | when `True`, the message triggering this response will be<br />replaced by this message. Mutually exclusive with `delete_original`. |
| `delete_original` | `bool \| None` | when `True`, the original message triggering this response<br />will be deleted, and any content of this message will be posted as a<br />new message. Mutually exclusive with `replace_original`. |
| `unfurl_links` | `bool \| None` | if `True`, links in the message will be automatically<br />unfurled. |
| `unfurl_media` | `bool \| None` | if `True`, media from links (e.g. images) will<br />automatically unfurl. |
| `metadata` | `dict[str, Any] \| None` | additional metadata to attach to the message. |
| `headers` | `dict[str, str] \| None` | HTTP request headers to include with the message. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | when any of the passed fields fail validation. |

</div>

### _MessagePayloadMixin {#messages._MessagePayloadMixin}

**Class**

```python

```

<div className="api-docstring">

Shared serialization helpers used by both BaseMessage and
WebhookMessage.

Both expose the same interface (``to_dict()``, ``json()``, ``__repr__``,
``__getitem__``, ``keys()``) so that ``**msg`` unpacking works with the
Slack Web/Webhook clients. Concrete subclasses must implement
``_resolve``.

</div>
